[tool.poetry]
name = "curiosity-jar"
version = "0.1.0"
description = "The Collection of Curiosity"
authors = ["Nuttaphat Arunoprayoch"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
numpy = "^1.19.4"
matplotlib = "^3.3.3"
pandas = "^1.1.4"
seaborn = "^0.11.0"
plotly = "^4.13.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
